--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -41,7 +41,9 @@
     },
     "section-2": {
       "heading": "How it works",
-      "details": "Using SWOB is as easy as authenticating your credentials",
+      "details": "With SMSWithoutBorders, you can send emails, tweet and chat on telegram without an active internet connection. By using our app, you can send messages securely through a network of SMS gateways to stay connected",
+      "paragraph-1": "We offer a pro-active approach to internet censorship. By setting up your account while you have an internet connection, you can continue to communicate later using SMS when your no longer have internet access",
+      "paragraph-2": "Our SMS gateways are freely available. Learn how to set up yours below",
       "steps": {
         "1": {
           "heading": "Sign Up",
