--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,7 +31,8 @@
     "continue": "continue",
     "try-again": "try again",
     "password-change": "change password",
-    "tutorial": "Tutorial"
+    "tutorial": "Tutorial",
+    "learn-more": "learn more"
   },
   "landing": {
     "section-1": {
@@ -63,6 +64,8 @@
           "details": "Enter your password in the app and begin transmitting messages while offline using SMS messages"
         }
       },
+      "tutorial-1": "Learn how to setup your your account and app",
+      "tutorial-2": "Learn how to setup gateway clients",
       "image-caption": "How SMSWithoutBorders works"
     },
     "section-3": {
