update: add links to swob developer

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,7 +14,8 @@
     "dashboard": "Dashboard",
     "sync": "Sync",
     "logout": "Logout",
-    "downloads": "Downloads"
+    "downloads": "Downloads",
+    "developers": "Developers"
   },
   "labels": {
     "sync": "sync",
